...

    func makeFeedItem() -> NSManagedObject? {
        return try? createFeedItem()
    }

    func delete(_ object: NSManagedObject) {
        delete(object, from: nil)
    }

    func loadFeeds() -> [Feed] {
        return (try? fetchFeeds()) ?? []
    }

...
